Generación nuevo API, de acuerdo a las modificaciones surgidas en el modelo relacional, y creación de servicios en los lugares congruentes a la función
