# models/parametro.go
@@ -48,7 +48,7 @@ func GetParametroById(id int) (v *Parametro, err error) {
 func GetAllParametro(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	qs := o.QueryTable(new(Parametro))
+	qs := o.QueryTable(new(Parametro)).RelatedSel();
 	// query k=v
 	for k, v := range query {
 		// rewrite dot-notation to Object__Attribute
